[package]
name = "bft-crdts"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2018"
license = "MIT OR BSD-3-Clause"

[[bin]]
name = "qp2p_proc"
path = "src/qp2p_proc.rs"

[dependencies]
crdts = "4.0.0"
ed25519 = { version = "1.0.0", package = "ed25519-dalek", features = ["serde"] }
rand = "0.7.3"
serde = "1.0.106"
bincode = "1.2.1"
hex = "0.4.2"
cmdr = { git = "https://github.com/mendelt/cmdr", rev = "8407462be39bb932ec86eea1b36ce325f3034ccb" }
tokio = { version = "~0.2.22", features = ["full"] }
qp2p = { git = "https://github.com/maidsafe/qp2p", rev = "10b7c25b55788cb4e1253e557cfe6d8d53d00cb0" }

[profile.test]
# Property testing is a power hungry beast, we need to go as fast as we can
opt-level = 3
lto = "fat" # noticed a very significant speed up from enabling lto, perf improvement of 1m33s -> 10s
incremental = false
