[package]
name = "bft-crdts"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2018"
license = "MIT OR BSD-3-Clause"

[[bin]]
name = "qp2p_proc"
path = "src/qp2p_proc.rs"

[dependencies]
crdts = "4.0.0"
ed25519 = { version = "2.0.0", package = "ed25519-dalek", features = ["serde", "rand_core"] }
rand = "0.8"
serde = "1.0.106"
bincode = "1.2.1"
hex = "0.4.2"
cmdr = { git = "https://github.com/mendelt/cmdr", rev = "8407462be39bb932ec86eea1b36ce325f3034ccb" }
tokio = { version = "1.18.5", features = ["full"] }
qp2p = "0.12"
thiserror = "1.0"

[profile.test]
opt-level = 3
lto = "fat"
incremental = false
